Fix user's name in header

--- a/Frontend/admin-dashboard/src/app/header/header.component.html
+++ b/Frontend/admin-dashboard/src/app/header/header.component.html
@@ -4,7 +4,7 @@
   data-scroll-distance="5"
 >
   <div class="container">
-    <a class="navbar-brand" [routerLink]="['/']">E-learning</a>
+    <a class="navbar-brand" [routerLink]="['/']">Admin dashboard</a>
     <button
       class="navbar-toggler"
       type="button"
