--- a/Frontend/admin-dashboard/src/app/courses/details/details.component.html
+++ b/Frontend/admin-dashboard/src/app/courses/details/details.component.html
@@ -4,7 +4,7 @@
       <div class="card mb-xxl">
         <img
           class="card-img-top"
-          src="./assets/images/photo-wide-1.jpg"
+          src="https://image.flaticon.com/icons/svg/3048/3048358.svg"
           alt="Card image cap"
         />
         <div class="card-body">
